2016-08-21	"The moving cursor writes, and having written, blinks on."

		configure :
		- now uses `-fPIE' instead of `-fPIC' on default, for both
		  host and target, to compile executables
		- now passes `-static' in $CXX_FOR_TARGET on default

		README.md :
		- updated project and bug descriptions

		bin/innocent-pear-dogecoin.cc ,
		share/innocent-pear/doge-03.cc :
		- tweaked creation and processing of R_386_PC32 relocations
		  to properly handle mergeable sections

		share/innocent-pear/doge-i.ld :
		- now also separates out .data.rel relocations -- apparently
		  used in g++ 4.8.4 to refer to RTTI constructs -- from the
		  rest of .data

		include/innocent-pear/rofl.h :
		- trying to fix "`asm' operand has impossible constraints"
		  under g++ 4 when compiling 0-argument syscalls for ARM
		- now marks fewer registers as clobbered when compiling
		  2-argument syscalls for ARM under g++ 4, to reduce
		  register pressure

		include/innocent-pear/orly.h :
		- wut(...) now purposely inhibits alias analysis

2016-08-20	So there is bfd_copy_private_header_data(...), and then
		there is bfd_copy_private_bfd_data(...).  ¯\_(ツ)_/¯

		GNUmakefile :
		- now also dumps compiled debug binaries

		bin/innocent-pear-doge.cc :
		- now simply forbids section groups and link-once sections
		  in its input
		- hopefully now correctly handles programs that throw and
		  catch exceptions -- ELF PT_GNU_EH_FRAME segments are now
		  copied
		- now copies a few more bits of a BFD asection from input to
		  output, following GNU objcopy

		bin/innocent-pear-dogecoin.cc :
		- now copies a few more bits of a BFD asection from input to
		  output, following GNU objcopy

		README.md :
		- updated bug list

2016-08-19	"...then lobbest thou thy Holy Hand Grenade of Antioch
		 towards thy foe..."

		bin/innocent-pear-dogecoin.cc :
		- now correctly fishes out section group signatures
		- no longer frobs relocations in link-once sections, group
		  information sections, or group members