@@ -9,19 +9,19 @@ env:
   - TARGET=
   - TARGET=
     CXX_FOR_TARGET=g++
-    CXXFLAGS_FOR_TARGET="-O3 -fPIC -pie -Wall"
+    CXXFLAGS_FOR_TARGET="-static -O3 -fPIE -pie -Wall"
   - TARGET=
     CXX_FOR_TARGET=clang++
-    CXXFLAGS_FOR_TARGET="-O3 -fPIC -pie -Wall"
+    CXXFLAGS_FOR_TARGET="-static -O3 -fPIE -pie -Wall"
   - TARGET=i686-linux-gnu
     CXX_FOR_TARGET=g++-5
-    CXXFLAGS_FOR_TARGET="-m32 -O3 -fPIC -pie -Wall"
+    CXXFLAGS_FOR_TARGET="-m32 -static -O3 -fPIE -pie -Wall"
   - TARGET=i686-linux-gnu
     CXX_FOR_TARGET=clang++
-    CXXFLAGS_FOR_TARGET="-m32 -O3 -fPIC -pie -Wall"
+    CXXFLAGS_FOR_TARGET="-m32 -static -O3 -fPIE -pie -Wall"
   - TARGET=i386-linux-gnu
     CXX_FOR_TARGET=g++-5
-    CXXFLAGS_FOR_TARGET="-m32 -O3 -fPIC -pie -Wall"
+    CXXFLAGS_FOR_TARGET="-m32 -static -O3 -fPIE -pie -Wall"
   - TARGET=i386-linux-gnu
   - TARGET=armv7-a-linux-gnueabi
   - TARGET=armv6-linux-gnueabi
